--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -33,5 +33,8 @@ jobs:
           curl -L $GITHUB_SERVER_URL/jyoo0515/linux/archive/$LINUX_SHA.zip -o linux.zip && unzip linux.zip
           echo "LINUX_DIR=linux-$LINUX_SHA" >> $GITHUB_ENV
       
+      - name: Install GCC
+        run: sudo apt-get install gcc
+      
       - name: Build the unzipped source code
         run: ./build-linux.sh $LINUX_DIR tinyconfig
