--- a/.github/workflows/linux.yml
+++ b/.github/workflows/linux.yml
@@ -19,6 +19,8 @@ jobs:
   build-linux:
     # The type of runner that the job will run on
     runs-on: ubuntu-20.04
+    env:
+      CC: gcc-8
     
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
